; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mcache.c_mcache_slab_audit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mcache.c_mcache_slab_audit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_5__* }
%struct.TYPE_4__ = type { i64, i32, i32 }

@MCACHE_FREE_PATTERN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.TYPE_5__*, i32)* @mcache_slab_audit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcache_slab_audit(i8* %0, %struct.TYPE_5__* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %13, %struct.TYPE_4__** %7, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @P2ROUNDUP(i32 %16, i32 4)
  store i64 %17, i64* %8, align 8
  br label %18

18:                                               ; preds = %62, %3
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = icmp ne %struct.TYPE_5__* %19, null
  br i1 %20, label %21, label %66

21:                                               ; preds = %18
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %11, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = bitcast %struct.TYPE_5__* %25 to i8*
  store i8* %26, i8** %9, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @IS_P2ALIGNED(i8* %27, i32 %30)
  %32 = call i32 @VERIFY(i32 %31)
  %33 = load i8*, i8** %9, align 8
  %34 = ptrtoint i8* %33 to i64
  %35 = sub i64 %34, 8
  %36 = inttoptr i64 %35 to i8**
  store i8** %36, i8*** %10, align 8
  %37 = load i8*, i8** %9, align 8
  %38 = ptrtoint i8* %37 to i64
  %39 = load i64, i64* %8, align 8
  %40 = add i64 %38, %39
  %41 = load i8**, i8*** %10, align 8
  %42 = load i8*, i8** %41, align 8
  %43 = ptrtoint i8* %42 to i64
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = add nsw i64 %43, %46
  %48 = icmp ule i64 %40, %47
  %49 = zext i1 %48 to i32
  %50 = call i32 @VERIFY(i32 %49)
  %51 = load i32, i32* %6, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %58, label %53

53:                                               ; preds = %21
  %54 = load i32, i32* @MCACHE_FREE_PATTERN, align 4
  %55 = load i8*, i8** %9, align 8
  %56 = load i64, i64* %8, align 8
  %57 = call i32 @mcache_set_pattern(i32 %54, i8* %55, i64 %56)
  br label %62

58:                                               ; preds = %21
  %59 = load i8*, i8** %9, align 8
  %60 = load i64, i64* %8, align 8
  %61 = call i32 @mcache_audit_free_verify_set(i32* null, i8* %59, i32 0, i64 %60)
  br label %62

62:                                               ; preds = %58, %53
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 0
  store %struct.TYPE_5__* %63, %struct.TYPE_5__** %65, align 8
  store %struct.TYPE_5__* %63, %struct.TYPE_5__** %5, align 8
  br label %18

66:                                               ; preds = %18
  ret void
}

declare dso_local i64 @P2ROUNDUP(i32, i32) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @IS_P2ALIGNED(i8*, i32) #1

declare dso_local i32 @mcache_set_pattern(i32, i8*, i64) #1

declare dso_local i32 @mcache_audit_free_verify_set(i32*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
